RESOLVED FIXED66442
[skia] -webkit-transform breaks -webkit-mask
https://bugs.webkit.org/show_bug.cgi?id=66442
Summary [skia] -webkit-transform breaks -webkit-mask
Ben Wells
Reported 2011-08-17 18:15:38 PDT
See attachment. This works in mac chrome (and presumably safari, although -webkit-linear-transform is pretty new so I can't test), but not windows or linux chrome. (This report is also reported at http://crbug.com/81478.)
Attachments
Patch (17.50 KB, patch)
2011-08-17 19:07 PDT, Ben Wells
no flags
Test case from crbug.com (313 bytes, text/html)
2011-08-17 19:09 PDT, Ben Wells
no flags
Ben Wells
Comment 1 2011-08-17 19:07:33 PDT
Ben Wells
Comment 2 2011-08-17 19:09:38 PDT
Created attachment 104297 [details] Test case from crbug.com
Stephen White
Comment 3 2011-08-18 04:42:23 PDT
This looks good, but have you run the full layout test suite? Does this patch will change any results on other tests (hopefully for the better)? For example, I'm wondering if this may be why our SVG masks results are wrong, e.g., crbug.com/3244.
Ben Wells
Comment 4 2011-08-18 16:46:24 PDT
I have run all the tests and there is no difference. SVG tests in particular seem to be equally broken, there is no improvement for the testcases on webkit bug 64237 or bug 44278, or for http://crbug.com/3244. I think the svg stuff might do the masking in other ways and have other problems. Looking at WebCore/rendering/svg/SVGImageBufferTools.cpp SVGImageBufferTools::renderSubtreeToImageBuffer it uses context.clipToImageBuffer (which seems to be used for bug 642367). I haven't investigated SVG further than this. There could be some other new non-svg passes which are hidden by font or other platform differences - I only noticed the transformed-mask.html included in the patch by accident when going to add a new test that had a similar name. I just generated a list of tests which are marked as fails which have webkit-mask or webkit-transform, there is quite a few but I'll check them out to see if we've got any new passes.
Stephen White
Comment 5 2011-08-18 20:50:23 PDT
Comment on attachment 104296 [details] Patch Looks good. Mike Reed should probably take a look at this when he gets back. r=me
Ben Wells
Comment 6 2011-08-18 21:06:41 PDT
Thanks for the review. I found two more tests which should pass, I'll rebaseline them once this has landed and had time to generate some results.
WebKit Review Bot
Comment 7 2011-08-18 21:51:51 PDT
Comment on attachment 104296 [details] Patch Clearing flags on attachment: 104296 Committed r93386: <http://trac.webkit.org/changeset/93386>
WebKit Review Bot
Comment 8 2011-08-18 21:51:56 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.